# data-rs

./: .env  Cargo.toml  README.md  data.json  source_code.txt
src/: lib.rs  main.rs
src/components/: eth_tracker.rs  mod.rs  rates.rs  tokens.rs  uniswap.rs
src/config/: blockchain.rs  currencies.rs  dex.rs  meta.rs  mod.rs  rates.rs  server.rs  zilliqa.rs
src/db/: mod.rs  quotes.rs
src/models/: currencies.rs  dex.rs  meta.rs  mod.rs  quotes.rs  shit_wallet.rs
src/server/: mod.rs
src/server/routers/: dex.rs  meta.rs  mod.rs  rates.rs  stake.rs  tokens.rs  wallet.rs
src/utils/: crypto.rs  mod.rs  zilliqa.rs
src/workers/: mod.rs  uniswap_quoter.rs
~/.zilpay/meta/: db  snap.000000000005380F  snap.000000000009F36C
~/.zilpay/meta/blobs/: 652124
