[package]
name = "data-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
log = "0.4.22"
reqwest = { version = "0.12.15", features = ["rustls-tls", "json", "gzip", "brotli"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
simple_logger = "5.0"
sled = "0.34.7"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"], default-features = false }
hyper = { version = "1.4", features = ["http1", "http2", "server"], default-features = false }
http-body-util = "0.1.2"
bytes = "1.7"
url = "2.5"
sha2 = "0.10"
hyper-util = { version = "0.1.10", features = ["http1", "http2", "server", "tokio"] }
thiserror = "2.0.12"
alloy = "1.0.6"
bincode = "2.0.1"

[dev-dependencies]
tempfile = "3.20.0"
mockito = "1.5.0"


